se corrige ruta

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-brown py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="colaboradoles.html">Colaboradores</a>
+                        <a class="collapse-item" href="colaboradores.html">Colaboradores</a>
                         <a class="collapse-item" href="sucursales.html">Sucursales</a>
                         <a class="collapse-item" href="usuarios.html">Usuarios</a>
                         <a class="collapse-item" href="proveedores.html">Proveedores</a>
