se modifica compras y productos

--- a/productos.html
+++ b/productos.html
@@ -207,6 +207,8 @@
                                     <th>Producto</th>
                                     <th>Categoría</th>
                                     <th>Marca</th>
+                                    <th>Modelo</th>
+                                    <th>Serie</th>
                                     <th>Stock Actual</th>
                                     <th>Precio Compra</th>
                                     <th>Precio Venta</th>
@@ -274,6 +276,14 @@
                             <select name="" id="id_categoria" class="form-control">
                                 <option value="0">--SELECCIONE--</option>
                             </select>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="modelo">Modelo</label>
+                            <input type="text" class="form-control" id="modelo">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="serie">Serie</label>
+                            <input type="text" class="form-control" id="serie">
                         </div>
                     </div>
                 </div>
