--- a/compra.html
+++ b/compra.html
@@ -256,30 +256,38 @@
                             </div>
                             <hr class="w-100">
                             <div class="row col-md-12">
-                                <div class="form-group col-md-5 my-2">
+                                <div class="form-group col-md-4 my-2">
                                     <label for="producto">Producto</label>
                                 </div>
-                                <div class="form-group col-md-3 my-2">
+                                <div class="form-group col-md-2 my-2">
                                     <label for="cantidad">Cantidad</label>
                                 </div>
+                                <div class="col-md-2 my-2">
+                                    <label for="precio">Precio Unitario</label>
+                                </div>
                                 <div class="col-md-3 my-2">
-                                    <label for="precio">Precio</label>
+                                    <label for="precio">Almacén</label>
                                 </div>
                                 <div class="form-group col-md-1 my-2">
                                 </div>
-                                <div class="form-group col-md-5 my-2">
+                                <div class="form-group col-md-4 my-2">
                                     <div class="input-group mb-3" style="display: flex;">
                                         <input type="text" class="form-control" id="producto">
                                     </div>
                                 </div>
-                                <div class="form-group col-md-3 my-2">
+                                <div class="form-group col-md-2 my-2">
                                     <div class="input-group mb-3" style="display: flex;">
                                         <input type="text" class="form-control" id="cantidad">
                                     </div>
                                 </div>
-                                <div class="col-md-3 my-2">
+                                <div class="col-md-2 my-2">
                                     <div class="input-group mb-3" style="display: flex;">
                                         <input type="text" class="form-control" id="precio">
+                                    </div>
+                                </div>
+                                <div class="col-md-3 my-2">
+                                    <div class="input-group mb-3" style="display: flex;">
+                                        <select class="form-control" id="id_almacen"></select>
                                     </div>
                                 </div>
                                 <div class="form-group col-md-1 my-2">
