--- a/compras.html
+++ b/compras.html
@@ -104,13 +104,12 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePOS"
-                    aria-expanded="true" aria-controls="collapsePOS">
+                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePOS" aria-expanded="true"
+                    aria-controls="collapsePOS">
                     <i class="fas fa-fw fa-folder"></i>
                     <span>Ventas</span>
                 </a>
-                <div id="collapsePOS" class="collapse " aria-labelledby="headingPages"
-                    data-parent="#accordionSidebar">
+                <div id="collapsePOS" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-brown py-2 collapse-inner rounded">
                         <a class="collapse-item" href="venta.html">Nueva Venta</a>
                         <a class="collapse-item" href="ventas.html">Lista Ventas</a>
@@ -251,11 +250,10 @@
                                     <th>Id</th>
                                     <th>Fecha</th>
                                     <th>Proveedor</th>
-                                    <th>Sucursal</th>
-                                    <th>Tipo Documento</th>
+                                    <th>Subtotal</th>
+                                    <th>IGV</th>
                                     <th>Total</th>
-                                    <th>Sub Total</th>
-                                    <th>Igv</th>
+                                    <th>Tipo Documento</th>
                                     <th>Forma Pago</th>
                                     <th width="5%"></th>
                                 </thead>
