--- a/movimientos.html
+++ b/movimientos.html
@@ -233,7 +233,7 @@
                                     <th>Producto</th>
                                     <th>Tipo</th>
                                     <th>Cantidad</th>
-                                    <th>Cliente</th>
+                                    <th>Origen/Destino</th>
                                     <th>Precio Unitario</th>
                                     <th>Fecha</th>
                                 </thead>
