--- a/stock.html
+++ b/stock.html
@@ -190,13 +190,13 @@
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
-                    <h1 class="h3 mb-4 text-gray-800">Stock Actual por Sucursal</h1>
+                    <h1 class="h3 mb-4 text-gray-800">Stock Actual por Almacén</h1>
 
                     <div class="row">
                         <div class="col-md-12 mb-3 form-row">
                             <div class="col-md-11">
-                                <label for="id_sucursal">Seleccionar Sucursal</label>
-                                <select name="" id="id_sucursal" class="form-control">
+                                <label for="id_almacen">Seleccionar Almacén</label>
+                                <select name="" id="id_almacen" class="form-control">
                                     <option value="0">--SELECCIONE--</option>
                                 </select>
                             </div>
@@ -212,6 +212,7 @@
                                     <th>Id</th>
                                     <th>Producto</th>
                                     <th>Cantidad</th>
+                                    <th>Estado</th>
                                 </thead>
                                 <tbody></tbody>
                             </table>
