--- a/compra.html
+++ b/compra.html
@@ -265,10 +265,10 @@
                                 <div class="col-md-2 my-2">
                                     <label for="precio">Precio Unitario</label>
                                 </div>
-                                <div class="col-md-3 my-2">
+                                <div class="col-md-2 my-2">
                                     <label for="precio">Almacén</label>
                                 </div>
-                                <div class="form-group col-md-1 my-2">
+                                <div class="form-group col-md-2 my-2">
                                 </div>
                                 <div class="form-group col-md-4 my-2">
                                     <div class="input-group mb-3" style="display: flex;">
@@ -285,15 +285,18 @@
                                         <input type="text" class="form-control" id="precio">
                                     </div>
                                 </div>
-                                <div class="col-md-3 my-2">
+                                <div class="col-md-2 my-2">
                                     <div class="input-group mb-3" style="display: flex;">
                                         <select class="form-control" id="id_almacen"></select>
                                     </div>
                                 </div>
-                                <div class="form-group col-md-1 my-2">
-                                    <span class="btn btn-outline-success w-100" id="add-item">
-                                        <i class="fa fa-plus"></i>
-                                    </span>
+                                <div class="form-group col-md-2 my-2">
+                                    <div id="div-compras"></div>
+                                    <div class="w-100 text-center">
+                                        <span class="btn btn-outline-success w-100" id="add-item">
+                                            <i class="fa fa-plus"></i>
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="w-100 col-md-6" id="div_lista_ventas">
@@ -321,7 +324,8 @@
                                             </th>
                                             <td id="">
                                                 <span id="subtotal_detalle_span">S/ </span>
-                                                <input type="hidden" name="" readonly id="subtotal" class="form-control">
+                                                <input type="hidden" name="" readonly id="subtotal"
+                                                    class="form-control">
                                             </td>
                                         </tr>
                                         <tr>
