Se modifica estilo

--- a/asignacion.html
+++ b/asignacion.html
@@ -23,6 +23,7 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="css/stylo.css" rel="stylesheet">
     <style>
         .pointer {
             cursor: pointer;
@@ -86,6 +87,7 @@
                         <a class="collapse-item" href="categorias.html">Categorias</a>
                         <a class="collapse-item" href="marcas.html">Marcas</a>
                         <a class="collapse-item" href="gastos.html">Gastos</a>
+                        <a class="collapse-item" href="roles.html">Roles</a>
                     </div>
                 </div>
             </li>
@@ -110,6 +112,20 @@
                     <div class="bg-brown py-2 collapse-inner rounded">
                         <a class="collapse-item active" href="asignacion.html">Asignaciones</a>
                         <!--<a class="collapse-item" href="ventas.html">Lista Ventas</a>-->
+                    </div>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseCompras"
+                    aria-expanded="true" aria-controls="collapseCompras">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Compras</span>
+                </a>
+                <div id="collapseCompras" class="collapse " aria-labelledby="headingPages"
+                    data-parent="#accordionSidebar">
+                    <div class="bg-brown py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="compra.html">Nueva Compra</a>
+                        <a class="collapse-item" href="compras.html">Lista Compras</a>
                     </div>
                 </div>
             </li>
