--- a/js/dom/logo.html
+++ b/js/dom/logo.html
@@ -4,25 +4,25 @@
     }
 
     .bg-gradient-primary-alt {
-        background-color: #3e0d04 !important;
+        background-color: #4ba6de !important;
         background-image: none !important;
     }
     .bg-brown-alt{
-        background-color: #3e0d04 !important;
+        background-color: #4ba6de !important;
     }
     .bg-brown {
-        background-color: #552922 !important;
+        background-color: #fff !important;
     }
 
     .bg-brown>a {
-        color: white !important;
+        color: #4ba6de !important;
     }
 
     .bg-brown>a:hover {
-        color: #3e0d04 !important
+        color: #4ba6de !important
     }
     thead{
-        background-color: #3e0d04;
+        background-color: #4ba6de;
         color: white;
     }
 </style>
