--- a/almacenes.html
+++ b/almacenes.html
@@ -23,6 +23,7 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="css/stylo.css" rel="stylesheet">
 
 </head>
 
@@ -65,14 +66,16 @@
                 </a>
                 <div id="collapsePages" class="collapse show" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-brown py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="sucursales.html">Sucursales</a>
+                        <a class="collapse-item" href="colaboradores.html">Colaboradores</a>
                         <a class="collapse-item" href="usuarios.html">Usuarios</a>
                         <a class="collapse-item" href="proveedores.html">Proveedores</a>
+                        <a class="collapse-item active" href="almacenes.html">Almacenes</a>
+                        <a class="collapse-item" href="sucursales.html">Sucursales</a>
                         <a class="collapse-item" href="productos.html">Productos</a>
                         <a class="collapse-item" href="categorias.html">Categorias</a>
                         <a class="collapse-item" href="marcas.html">Marcas</a>
                         <a class="collapse-item" href="gastos.html">Gastos</a>
-                        <a class="collapse-item active" href="almacenes.html">Almacenes</a>
+                        <a class="collapse-item" href="roles.html">Roles</a>
                     </div>
                 </div>
             </li>
@@ -87,15 +90,29 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePOS"
-                    aria-expanded="true" aria-controls="collapsePOS">
+                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePOS" aria-expanded="true"
+                    aria-controls="collapsePOS">
                     <i class="fas fa-fw fa-folder"></i>
-                    <span>Ventas</span>
+                    <span>Salidas</span>
                 </a>
                 <div id="collapsePOS" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-brown py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="venta.html">Nueva Venta</a>
-                        <a class="collapse-item" href="ventas.html">Lista Ventas</a>
+                        <a class="collapse-item" href="asignacion.html">Nueva Asignación</a>
+                        <!--<a class="collapse-item" href="ventas.html">Lista Ventas</a>-->
+                    </div>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseCompras"
+                    aria-expanded="true" aria-controls="collapseCompras">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Compras</span>
+                </a>
+                <div id="collapseCompras" class="collapse " aria-labelledby="headingPages"
+                    data-parent="#accordionSidebar">
+                    <div class="bg-brown py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="compra.html">Nueva Compra</a>
+                        <a class="collapse-item" href="compras.html">Lista Compras</a>
                     </div>
                 </div>
             </li>
