--- a/roles.html
+++ b/roles.html
@@ -23,6 +23,7 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="css/stylo.css" rel="stylesheet">
 
 </head>
 
@@ -96,8 +97,22 @@
                 </a>
                 <div id="collapsePOS" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-brown py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="asignacion.html">Asignaciones</a>
+                        <a class="collapse-item" href="asignacion.html">Nueva Asignación</a>
                         <!--<a class="collapse-item" href="ventas.html">Lista Ventas</a>-->
+                    </div>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseCompras"
+                    aria-expanded="true" aria-controls="collapseCompras">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Compras</span>
+                </a>
+                <div id="collapseCompras" class="collapse " aria-labelledby="headingPages"
+                    data-parent="#accordionSidebar">
+                    <div class="bg-brown py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="compra.html">Nueva Compra</a>
+                        <a class="collapse-item" href="compras.html">Lista Compras</a>
                     </div>
                 </div>
             </li>
